<resources>
    <string name="app_name">MH-Term-App</string>
    <string name="app_title">길라잡이</string>

    <!-- sign home-->
    <string name="title_sign_up">회원가입</string>
    <string name="title_sign_in">로그인</string>
    <string name="title_sign_skip">둘러보기</string>

    <!-- phone auth -->
    <string name="txt_request_phone">인증요청</string>
    <string name="txt_request_again"><u>인증재요청</u></string>
    <string name="txt_hint_phone_input">- 제외하고 숫자만 입력</string>
    <string name="txt_hint_auth_num_input">인증번호를 입력해주세요.</string>
    <string name="txt_auth_fail">인증 번호를 다시 확인해주세요.</string>
    <string name="txt_auth_timeout">인증 번호가 만료되었습니다.</string>
    <string name="txt_request_message">인증 번호 요청 완료</string>
    <string name="txt_request_message_fail">인증 번호 요청 실패</string>

    <!-- ID,PW auth -->
    <string name="hint_id_input">이메일 형식으로 입력</string>
    <string name="notice_id_input">이메일 형식으로 입력해주세요.</string>
    <string name="notice_id_possible">해당 아이디는 사용 가능합니다.</string>
    <string name="notice_id_impossible">해당 아이디는 사용 불가능합니다.</string>
    <string name="hint_password_input">영문,숫자,특수문자 조합 8~20자리</string>
    <string name="notice_password_input">영문,숫자,특수문자 조합 8~20자리로 입력해주세요.</string>
    <string name="hint_check_password_input">틀리지 않도록 주의해주세요.</string>
    <string name="notice_check_password_fail">비밀번호가 일치하지 않습니다.</string>

    <!-- sign in -->
    <string name="desc_sign_in">로그인 정보를 입력해주세요.</string>
    <string name="hint_email_id">id@example.com</string>
    <string name="hint_password">영문,숫자,특수문자 포함 8자리 이상</string>
    <string name="desc_account_null">계정이 없으신가요?</string>
    <string name="notice_sign_in_fail">아이디 또는 비밀번호를 다시 확인해주세요.</string>
    <string name="notice_id_form">아이디를 이메일 형식으로 입력해주세요.</string>

    <!-- sign up -->
    <string name="desc_sign_up">회원가입 정보를 입력해주세요.</string>
    <string name="sub_title_id">이메일 아이디</string>
    <string name="sub_title_password">비밀번호</string>
    <string name="sub_title_check_password">비밀번호 확인</string>
    <string name="sub_title_next">다음</string>

    <!-- move dialog -->
    <string name="desc_go_to_sign_up">해당 번호로 가입된 계정이 없습니다.\n회원가입으로 이동하시겠습니까?</string>
    <string name="desc_go_to_sign_in">해당 번호로 가입된 계정이 있습니다.\n로그인으로 이동하시겠습니까?</string>
    <string name="desc_update_back">수정 사항이 있습니다.\n저장하지 않고 이동하시겠습니까?</string>
    <string name="desc_need_login">로그인 후 이용이 가능합니다.\n로그인으로 이동하시겠습니까?</string>

    <!-- user info -->
    <string name="desc_user_info">리뷰 작성을 위해 추가 정보를 입력해주세요.</string>
    <string name="sub_title_nickname">닉네임</string>
    <string name="hint_nickname_input">닉네임을 입력해주세요.</string>
    <string name="txt_double_check">중복확인</string>
    <string name="notice_nick_input">"특수문자는 사용하실 수 없습니다."</string>
    <string name="notice_nickname_possible">해당 닉네임은 사용 가능합니다.</string>
    <string name="notice_nickname_impossible">해당 닉네임은 사용 불가능합니다.</string>

    <string name="txt_user_type">특이사항</string>
    <string name="txt_user_type_wheelchair">휠체어 사용자</string>
    <string name="txt_user_type_guardian">영유아 보호자</string>
    <string name="txt_user_type_handicap">시각 장애인</string>
    <string name="txt_user_type_injured">목발 사용 등 부상자</string>
    <string name="txt_user_type_old">노약자</string>
    <string name="txt_complete">완료</string>

    <!-- map -->
    <string name="hint_search_place">장소명 검색</string>
    <string name="txt_place_facility">시설물</string>
    <string name="txt_place_store">매장</string>
    <string name="txt_place_charging_station">충전소</string>
    <string name="txt_place_movement_support_center">이동지원센터</string>
    <string name="txt_place_restroom">화장실</string>
    <string name="txt_add_review">리뷰 작성하기</string>

    <!-- menu -->
    <string name="user_nickname_format" formatted="false">%s 님</string>
    <string name="title_menu_edit_user_info">사용자 정보 수정</string>
    <string name="title_menu_review_list">리뷰 내역</string>
    <string name="title_menu_favorite_list">즐겨찾기 내역</string>
    <string name="title_menu_report">신규 제보하기</string>
    <string name="title_menu_logout">로그아웃</string>
    <string name="desc_menu_user_none">로그인 후\n이용해주세요:)</string>
    <string name="desc_favorite_place_click">장소를 클릭하면 자세히 살펴볼 수 있습니다.</string>
    <string name="desc_logout">정말 로그아웃하시겠습니까?</string>

    <!-- menu : report/place -->
    <string name="desc_report_place_start">제보 위치</string>
    <string name="desc_report_place_end">와 유형에 대해 알려주세요:)</string>
    <string name="desc_address_input">지도를 움직여 위치를 설정해주세요.</string>
    <string name="hint_address_edt">상세 주소를 입력해주세요.</string>
    <string name="sub_title_address">주소</string>
    <string name="sub_title_type">유형</string>
    <string name="sub_title_store">매장</string>
    <string name="sub_title_facility">도로 시설물</string>

    <!-- menu : report/info/store -->
    <string name="desc_report_type_store_start">제보 하시는 매장에 대</string>
    <string name="desc_report_type_store_end">해 자세히 알려주세요:)</string>
    <string name="sub_title_type_detail">상세유형</string>
    <string name="txt_restaurant">음식점</string>
    <string name="txt_cafe">카페</string>
    <string name="txt_etc">기타</string>
    <string name="sub_title_info_detail">상세정보</string>
    <string name="txt_store_name">매장명</string>
    <string name="txt_store_time">운영시간</string>
    <string name="txt_store_phone">전화번호</string>
    <string name="hint_store_name_input">매장명을 입력해주세요.</string>
    <string name="hint_open_time_input">오픈 시간 선택</string>
    <string name="hint_close_time_input">마감 시간 선택</string>
    <string name="hint_week_time_input">평일 시간 선택</string>
    <string name="hint_saturday_time_input">토요일 시간 선택</string>
    <string name="hint_monday_time_input">일요일 시간 선택</string>
    <string name="hint_store_phone_input">전화번호를 입력해주세요.</string>
    <string name="hint_store_type_input">매장 업종을 입력해주세요.</string>
    <string name="sub_title_warning">주의사항</string>
    <string name="txt_warning_slope">경사</string>
    <string name="txt_warning_height">높이</string>
    <string name="txt_warning_offset">단차</string>
    <string name="txt_warning_out">돌출물</string>
    <string name="txt_warning_finish">마감</string>
    <string name="txt_warning_info">안내시설</string>
    <string name="txt_warning_width">통행폭</string>
    <string name="sub_title_warning_target">주의대상</string>
    <string name="sub_title_info_plus">추가설명</string>
    <string name="hint_info_plus_input">자세한 설명일수록 다른 사용자들에게 도움이 됩니다.</string>

    <!-- menu : report/info/facility -->
    <string name="desc_report_type_facility_start">제보 하시는 시설물에 대</string>
    <string name="desc_report_type_facility_end">해 자세히 알려주세요:)</string>
    <string name="sub_title_location_detail">상세위치</string>
    <string name="txt_inside">실내</string>
    <string name="txt_outside">실외</string>
    <string name="txt_bollard">볼라드</string>
    <string name="txt_street">인도</string>
    <string name="txt_block">점자블록</string>
    <string name="txt_car_area">차량 진입구역</string>
    <string name="txt_crosswalk">횡단보도</string>
    <string name="txt_pass">항목에 없거나 구분이 어려움</string>

    <!-- details -->
    <string name="txt_store_info">매장 정보</string>
    <string name="txt_facility_info">시설물 정보</string>
    <string name="txt_charging_info">충전소 정보</string>
    <string name="txt_center_info">센터 정보</string>
    <string name="txt_toilet_info">화장실 정보</string>
    <string name="txt_review">리뷰</string>
    <string name="txt_weekday">평일</string>
    <string name="txt_saturday">토요일</string>
    <string name="txt_monday">일요일</string>
    <string name="txt_holiday">주말</string>
    <string name="txt_air_use">공기주입 가능 여부</string>
    <string name="txt_same_use">동시 사용 가능 대수</string>
    <string name="txt_phone_use">휴대전화 충전 가능 여부</string>
    <string name="txt_possible">가능</string>
    <string name="txt_impossible">불가능</string>
    <string name="txt_reservation">예약 정보</string>
    <string name="txt_ahead_time">사전예약</string>
    <string name="txt_car_run">운행 정보</string>
    <string name="txt_car_info">보유 차량 종류 및 대수</string>
    <string name="txt_car_slope">슬로프형 휠체어 차량</string>
    <string name="txt_car_lift">리프트형 휠체어 차량</string>
    <string name="txt_car_inside_area">차량 관내 운행지역</string>
    <string name="txt_car_outside_area">차량 관외 운행지역</string>
    <string name="txt_user_info">이용 안내</string>
    <string name="txt_car_pay">이용 요금</string>
    <string name="txt_car_target">이용 대상</string>
    <string name="txt_limit_info">제한 사항</string>
    <string name="txt_facility_item_info">시설 안내</string>
    <string name="txt_management_info">관리 기관 안내</string>

    <!-- update info-->
    <string name="desc_add_time_info">이용시간을 알려주세요.</string>
    <string name="desc_add_phone_info">전화번호를 알려주세요.</string>
    <string name="desc_add_target_info">주의 대상을 알려주세요.</string>
    <string name="desc_add_warning_info">위험 요소를 알려주세요.</string>
    <string name="title_update_place_info">정보 수정 제안</string>
    <string name="txt_transfer">위치ㆍ이전</string>
    <string name="desc_transfer_address">변경된 위치를 정확히 알려주세요.</string>
    <string name="txt_send">보내기</string>

    <!-- review -->
    <string name="title_user_review">작성 리뷰 내역</string>
    <string name="title_review_add">리뷰 작성</string>
    <string name="hint_review_input">내용을 입력해주세요.</string>
    <string name="desc_review_none">아직 등록된 리뷰가 없습니다.\n이곳의 첫 번째 리뷰를 작성해보세요:)</string>
    <string name="desc_user_review_none">작성한 리뷰가 없습니다.\n방문했던 곳의 리뷰를 작성해보세요:)</string>

    <!-- etc -->
    <string name="txt_server_error">서버 점검중입니다.</string>
    <string name="txt_search_result_none">검색 결과가 없습니다.</string>
    <string name="txt_phone_number_none">번호 정보가 없습니다.</string>
    <string name="txt_source">공공데이터포털 제공</string>
    <string name="desc_recent_search_none">최근 검색 기록이 없습니다.</string>
    <string name="txt_anvil_feature">서비스 준비중입니다.</string>
    <string name="txt_timeout">다시 한번 시도해주세요.</string>

</resources>