<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.menu.report.ReportTypeActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    android:id="@+id/tb_report_type"
                    layout="@layout/tb_title_with_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_report_type_title"
                    style="@style/MediumText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/desc_report_type"
                    android:textSize="26dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tb_report_type" />

                <TextView
                    android:id="@+id/textView36"
                    style="@style/MediumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/txt_place_store"
                    android:textColor="@color/dark_grey"
                    android:textSize="18dp"
                    app:layout_constraintStart_toStartOf="@+id/txt_report_type_title"
                    app:layout_constraintTop_toBottomOf="@+id/txt_report_type_title" />

                <ImageView
                    android:id="@+id/imageButton"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/rg_report_type"
                    app:layout_constraintStart_toStartOf="@+id/textView36"
                    app:layout_constraintTop_toBottomOf="@+id/textView36"
                    app:srcCompat="@color/grey" />

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_place_facility"
                    android:textSize="18dp"
                    android:textColor="@color/dark_grey"
                    style="@style/MediumText"
                    app:layout_constraintStart_toStartOf="@+id/textView36"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageButton"
                    app:layout_constraintStart_toStartOf="@+id/textView42"
                    app:layout_constraintTop_toBottomOf="@+id/textView42"
                    app:srcCompat="@color/grey" />

                <TextView
                    android:id="@+id/textView47"
                    style="@style/MediumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_pass"
                    android:textColor="@color/dark_grey"
                    android:textSize="18dp"
                    app:layout_constraintStart_toStartOf="@+id/textView42"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <RadioGroup
                    android:id="@+id/rg_report_type"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_report_type_title">

                    <RadioButton
                        android:id="@+id/rb_report_type_restaurant"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

                    <RadioButton
                        android:id="@+id/rb_report_type_cafe"
                        android:layout_width="match_parent"
                        android:layout_height="51dp" />

                    <RadioButton
                        android:id="@+id/rb_report_type_street"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

                </RadioGroup>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_report_type_next"
                    style="@style/ButtonText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="35dp"
                    android:background="@drawable/selector_sign_btn"
                    android:onClick="goToReportType"
                    android:text="@string/sub_title_next"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>